--- a/mailing/index.html
+++ b/mailing/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STD Supervielle</title>
+    <meta name="color-scheme" content="light">
+    <meta name="supported-color-schemes" content="light">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:300,400,500,700&display=swap" rel="stylesheet"> 
-    <style>
-        * {margin: 0px; padding: 0px; font-family: 'Catamaran', Arial, Helvetica, sans-serif;}
+    <style type="text/css">
+        :root { color-scheme: light; supported-color-schemes: light;}
+        * {margin: 0px; padding: 0px; font-family: 'Catamaran', Arial, Helvetica, sans-serif; color-scheme: light; supported-color-schemes: light;}
         strong {font-weight: 700;}
     </style>
 </head>
@@ -22,7 +25,7 @@
                             <table border="0" cellspacing="0" cellpadding="0" style="border-collapse: collapse;" bgcolor="#FFFFFF">
                                 <tr>
                                     <td>
-                                        <img src="images/header.jpg" alt="Supervielle - Convención 2020 - STD" title="Supervielle - Convención 2020 - STD" style="border: 0; display: block; width: 100%;">
+                                        <img src="https://leandromuzzupappa.github.io/banco-supervielle-std-2020/mailing/images/header.jpg" alt="Supervielle - Convención 2020 - STD" title="Supervielle - Convención 2020 - STD" style="border: 0; display: block; width: 100%;">
                                     </td>
                                 </tr>
                             </table>
@@ -31,7 +34,7 @@
 
                     <!--Donde y cuando-->
                     <tr>
-                        <td width="100%" bgcolor="#FFFFFF" style="background: url(images/bg.png) center bottom no-repeat;" align="center">
+                        <td width="100%" bgcolor="#FFFFFF" style="background: url(https://leandromuzzupappa.github.io/banco-supervielle-std-2020/mailing/images/bg.png) center bottom no-repeat;" align="center">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0" style="border-collapse: collapse;">
                                 <tr><td height="30" colspan="3"></td></tr>
                                 <tr>
@@ -71,7 +74,7 @@
                                                                         <tr>
                                                                             <td width="20"></td>
                                                                             <td>
-                                                                                <img src="images/cuando.png" alt="¿Cuándo? 19 y 20 de marzo" title="¿Cuándo? 19 y 20 de marzo" style="border: 0; display: block; width: 100%;">
+                                                                                <img src="https://leandromuzzupappa.github.io/banco-supervielle-std-2020/mailing/images/cuando.png" alt="¿Cuándo? 19 y 20 de marzo" title="¿Cuándo? 19 y 20 de marzo" style="border: 0; display: block; width: 100%;">
                                                                             </td>
                                                                             <td width="20"></td>
                                                                         </tr>
@@ -89,7 +92,7 @@
                                                                         <tr>
                                                                             <td width="20"></td>
                                                                             <td>
-                                                                                <img src="images/donde.png" alt="¿Dónde? Howard Johnson Luján" title="¿Dónde? Howard Johnson Luján" style="border: 0; display: block; width: 100%;">
+                                                                                <img src="https://leandromuzzupappa.github.io/banco-supervielle-std-2020/mailing/images/donde.png" alt="¿Dónde? Howard Johnson Luján" title="¿Dónde? Howard Johnson Luján" style="border: 0; display: block; width: 100%;">
                                                                             </td>
                                                                             <td width="20"></td>
                                                                         </tr>
@@ -163,7 +166,7 @@
                                                                             <td width="10"></td>
                                                                             <td align="center">
                                                                                 <a href="#">
-                                                                                    <img src="images/cta.png" alt="click aquí" title="click aquí" style="border: 0; display: block; width: 100%;">
+                                                                                    <img src="https://leandromuzzupappa.github.io/banco-supervielle-std-2020/mailing/images/cta.png" alt="click aquí" title="click aquí" style="border: 0; display: block; width: 100%;">
                                                                                 </a>
                                                                             </td>
                                                                             <td width="10"></td>
