--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supervielle - Convención 2020 - STD</title>
 
     <link rel="stylesheet" href="assets/css/main.min.css">
+    
+    <meta name="author" content="Leandro Muzzupappa" />
+    <meta name="copyright" content="Leandro Muzzupappa 2020 https://github.com/leandromuzzupappa/" />
 </head>
 <body>
 
