--- a/web/index.html
+++ b/web/index.html
@@ -13,9 +13,10 @@
     <link rel="shortcut icon" href="https://vignette.wikia.nocookie.net/lossimpson/images/a/ae/Lenny_Leonard.png/revision/latest/top-crop/width/360/height/450?cb=20090201210656&path-prefix=es" type="image/x-icon">
     <meta content="https://vignette.wikia.nocookie.net/lossimpson/images/a/ae/Lenny_Leonard.png/revision/latest/top-crop/width/360/height/450?cb=20090201210656&path-prefix=es" property="og:image">
     <meta charset="UTF-8">
+    <meta content="Supervielle - Convención 2020 - STD" property="title">
     <meta content="Supervielle STD landing page confirmacion de asistencia" name="description">
-    <meta content="Supervielle STD landing page confirmacion de asistencia" property="og:title">
-    <meta content="Supervielle STD landing page confirmacion de asistencia - Leandro Muzzupappa" name="og:description">
+    <meta content="Supervielle - Convención 2020 - STD" property="og:title">
+    <meta content="Supervielle STD landing page confirmacion de asistencia" name="og:description">
 </head>
 <body>
 
