-web: agreado el logo, bajada y fecha; y fixes varios. -/respuestas: creada la seccion para ver las respuestas ingresadas y descargar como excell

--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,9 @@
     <meta content="Supervielle STD landing page confirmacion de asistencia" name="description">
     <meta content="Supervielle - Convención 2020 - STD" property="og:title">
     <meta content="Supervielle STD landing page confirmacion de asistencia" name="og:description">
+
+    <link rel="shortcut icon" href="https://www.supervielle.com.ar/static/favicon.png" type="image/x-icon">
+    <meta property="og:image" content="https://www.supervielle.com.ar/static/favicon.png" />
 </head>
 <body>
 
@@ -31,6 +34,11 @@
     <header>
 
         <section class="col image">
+            <img src="assets/images/header-bajada.png" alt="Convención 2020 Supervielle - Save the date" class="logo">
+            <div class="col datos">
+                <img src="assets/images/header-cuando.svg" alt="Cuando" class="col left">
+                <img src="assets/images/header-donde.svg" alt="Donde" class="col right">
+            </div>
         </section>
         <section class="col bajada">
             <h1>Confirmá tu asistencia</h1>
