-web: removido el btn de ver respuestas. -/respuestas: fix errores de ortografia

--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
         </section>
         <section class="col bajada">
             <h1>Confirmá tu asistencia</h1>
-            <a target="_blank" href="https://docs.google.com/spreadsheets/d/13P9D_wC6DFh2Nc9JY8qcQPMJbhYcxcTBZoPorL5b_uI/edit#gid=1375225892">Mirar respuestas aca</a>
+            <!-- <a target="_blank" href="https://docs.google.com/spreadsheets/d/13P9D_wC6DFh2Nc9JY8qcQPMJbhYcxcTBZoPorL5b_uI/edit#gid=1375225892">Mirar respuestas aca</a> -->
 
             <form id="STDform" target="_self" onsubmit="return postToGoogle();" action="" autocomplete="off">
 
